# whichllm

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: troubleshooting.md
src/whichllm/: cli.py  utils.py
src/whichllm/engine/: compatibility.py  performance.py  ranker.py  types.py
src/whichllm/hardware/: memory.py
src/whichllm/models/: benchmark.py  cache.py
src/whichllm/models/benchmark_sources/: aa_index.py  constants.py
src/whichllm/output/: display.py
tests/: test_aa_index.py  test_compatibility.py  test_memory.py  test_r3_regressions.py  test_utils.py
